Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-27839

Audit Daemon: Cannot disable users_ids with the same "user" separately

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 5.5.0
    • .master
    • couchbase-bucket
    • Untriaged
    • Unknown

    Description

      For Vulcan we are adding the ability to filter events based on user.

      Currently the disabled_user list takes just the user part of a user_id.
      However ns_server allows ldap user to have the same id as internal user. so in fact

      {"source":"external","user":"vova"}

      =/=

      {"source":"local","user":"vova"}

      .

      Therefore it is required to be be able to disable them separately.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            owend Daniel Owen
            owend Daniel Owen
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 16h
                16h
                Remaining:
                Remaining Estimate - 16h
                16h
                Logged:
                Time Spent - Not Specified
                Not Specified

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty